@@ -4,9 +4,9 @@ AUX tlp-usblist-print-unknown-if-device-desc-is-empty.patch 946 SHA256 a05701907
 DIST tlp-gentoo-additions-0.3.7.1.tar.bz2 9073 SHA256 0f139b54adaf5a340cf200d7ee8602e53f94558f94d430d043e907985c4d3a67 SHA512 0a56ea1b7270c8ea5fe1157ae64f42da67e79e02243bf33bffba825b5b53628bace31ab00b3b0448dde00a2db215d7c5012ae4774552f1c4ff0e7e197d45600b WHIRLPOOL dea2a3c80f55945d6b76d8ee8a8b9d9cd27877314fddc0145d0886516b9c274c124c365274845d40a7f091fe7304b2a69827d136aefa75ce53b89e4905814c51
 DIST tlp-gentoo-additions-0.3.8.1.tar.bz2 9227 SHA256 b04e22b5a5c63665ef742ca88a100694f21072e80162c34a4a7ef00367681343 SHA512 cc44e8dfc1f7e103df89c5b80e1f1f7de0fecf022eafaa497d733980cf0396ca136356ff5606cbafe693a05b7c2c315858b007acd26fa01728efc061ab2cab07 WHIRLPOOL 7f201107509da020dbe7d5e223cafb2f5ee70e73dde21f14c786f9b9eb76970e9bcecf39c5ecbdc3815b29808e7c120660ce141927492e8e4e8d788cd7d456e6
 DIST tlp-gentoo-additions-0.3.9.tar.bz2 9209 SHA256 3e82e50c4f673ee3225f58aae90cac2eb04fdca4293572da09411dbbebe0f51b SHA512 cfef43fb3993a021520d7b6571d31b27130a1c58851c93cd1b8b936a1d73a7362f9d084553baf2675558b29a8d1dab5f119420b1e62a19e8a834d35776db1953 WHIRLPOOL e7c387cc2b377dfa345bc491fa941de7d95da0354b3b60e13dbd68c433d25d7e37ab0a1f8ad89b166d05054b5b10977869b0792f1dd9d35fd5a50c0ffd2e91ff
-EBUILD tlp-0.3.7.1.ebuild 5503 SHA256 f42b49612ee818b4e3a4d5ab41655b3de40d768535ad41561f89ab9206f77e61 SHA512 d6c383f99cbfd087c1803e02531a8c86cab0cfc03e3c4e26cc7477c9e43c4f94b74aceda6647ec6ab887b9af9c7398e2047efd0c03978c5de4c8025696256830 WHIRLPOOL 0d5698b88a20cdff62d53b059f7795735b8c991364c5609db159911537bf13d10cb6b6ec5dbf375b4c660689b5ecae7d604795fb3dba46c19b3aeb39ff3bb473
-EBUILD tlp-0.3.8.1.ebuild 5685 SHA256 d043bb46d71a8766b7e4d0eca373b8837287220b92caf9128f6b027c28ed6c58 SHA512 0bc3bd016006de6e598f082db40d04c0bacde6e3d0dca52daa7e452009d4350fe7c228fa3beb3b4bd7c2d1142850b70f1a30b2ee5fd7806c4f1f9ee012627c76 WHIRLPOOL 2b3e1ff6dcb72a3203a64dc9bb36855021df3c139de9786d35034cab37dd13fb3fea3a183c9af8a92755ca62c5577ef00a3423f41ab1ad8b8cad9b69b0eb085b
-EBUILD tlp-0.3.9.900_pre20130730.ebuild 5931 SHA256 df00373abb130d4c0ad6fc5132d61fd2f2b8b789b65db465aae0da23667976ed SHA512 7726e4a84243215fda3a50872430c407911fd19881baba370025f183ab62ed1ed80ffd19d957d3c6470660a148b855ad858bc84d2171e2f20df808872bbf2d8b WHIRLPOOL 9ab1c825ca6fd57a166d9a909e49cfc28315c19b3d572a1f6a9e6d6c79bb590fe3e6f3cca6ad29a0b1e7d4354b23d759236da29247c9cc2425a3583fb597fe63
-EBUILD tlp-0.3.9.ebuild 5719 SHA256 13a608c4ce102ea8621d794bb41b1c11732b44ae1e88c635bc66723b949acde4 SHA512 9a151046b589a31ca7e3d1caed68d6cd4230a886e72b49d6c97a898b5a0180f54a46e3b941783a1649612c98e545865097dbf31a3ab764fbcce4252a9510be42 WHIRLPOOL ae7f34103150bfe348bc5cd0248bba9b7d970ccdca676a1e4dadf288b5de5d0dd451c29d33f5df75eac778cf0356dc144efbb19d377fd33a67915cfc10fb2408
-MISC ChangeLog 6799 SHA256 fe98aa3f2f5e1fb9454925befbb37ee2a8a1b48b002def053c4c416da5f2173d SHA512 da2ec086eb123e734ed35fe807dcd434ff129257053414966c55b455adad461c807e34c471af5ccf9d5b830e60df7cafc37c4e13c2962130ac1eae87b164e042 WHIRLPOOL bee7cc3c7399abb3a5b015dcfd8107c3a53d2a6d739f3c2b515859c056f9c822533665134ad6509a5c0128f4721be6eb085d34df10585ec5de6b2b6a2e0cec37
+EBUILD tlp-0.3.7.1.ebuild 5530 SHA256 8548e5cd49d3ef47544c8258556abb8ea231829d3581513eea5df17c3327ccbb SHA512 9d5179aa4029d3aa590a15a28ca56f1eba2f5224f695f8ce582a38a633f1aa30360c27dc88f16b79cc910f9f40ed36c482c14c7eab23a3d566965e5f2ca784a2 WHIRLPOOL 363dda25b48c13f07c6561493aa3a5534b0c75f03ce6dfb813fb191b39444ec9b973f2fc047a9105f79f2c05f3716ae5773456dd4235bc4107258e2045d64042
+EBUILD tlp-0.3.8.1.ebuild 5712 SHA256 7eb7b8de9675be318dd50c8d1a7c4d1971bdc2317639db2137a4e17d226a2531 SHA512 068140a1235c408ec58f2c74fed58e408e3cc9f65ec5389bd71bb5bdb1872f52a15b419f93462934bd3dc08cca2e071cbb8fa68049219893d58283e29f878379 WHIRLPOOL 2e03062f843b15d139660ccdf879d49bd767ef65742140fb2c1ca6f61dceba9426770bbda836b63e8c1b5276ae61ef3b4cbc08956c214ea6196aad5b587d82f5
+EBUILD tlp-0.3.9.900_pre20130730.ebuild 5958 SHA256 e2396138646d6e4ebc97072e8e189b5846123f034980ce21e947dbc759704758 SHA512 29130ed6658499f4b62f98ef5aa161f395a2802d02146bd7d8faf7e0bf78629e978a6b19ba8142fb66bcde60eac05b2e2d68d4d1681aa46bf7fa7c3a56a1e868 WHIRLPOOL f5fa56a8052a75e41597920b9c688cb750da650428dba8f48da23af65f8db278a1162ee973a4697ddca7091ba14d17a3920452320e33ceff15ca13618d16270f
+EBUILD tlp-0.3.9.ebuild 5746 SHA256 8efa29f88820d66f21c51a3624c11e8bbf66c25195dd94abd05bf1561747b38b SHA512 81f340a19a659d94bb7a6aae1e6abd45490618ba6b28a870ae80ae104cac1daba85c5889ee44753face5458744bf87503d2c09292b41c2a855d57e9b2f2679a0 WHIRLPOOL adf316b6e083a7fd75206b172fb41e427d0beda39d6de711db5824f4b2f661a27bceba8f63c8e84f4cf4a8b9331ad13a9d85b9556ecd1b0b8e73be22aceb13ab
+MISC ChangeLog 7009 SHA256 e666a0e6dcfeb4e3d59f8c66992d04f3d1830222612bf5dc81223015b66b376e SHA512 5da7170c494b2778b76ca6e93f63cf52d1d62b207bdeb510343711171a049ed4c7efb22ff5ccd04714d73f342bb25cede3ecab76d4ffcdb652241b3fdde1cb75 WHIRLPOOL 4554048001fee66f561d8ee6daf51b47f8030a9dfd640eb3b9accaed8cdd8b26c1b940a366b2e2c73eba3f09732b9cf2dd5ee234c4950b3f745eef26baa3530d
 MISC metadata.xml 1691 SHA256 fdfca8125ccdbc41454ee45f2047fb48d64d7e91559ee632b0f9429998fe2ced SHA512 24a4630f91705f6898b8091a37e712ef81356846b39c843725e3dfc1f413f690450c4638f0c049cdebd3af20bb2e52a0b7cc1a20e204e9a5a113efb757911a97 WHIRLPOOL 52ad6e53118146ef27435d93bc4d2937ad74d75dcd220b56ae0e09a13539d079bdc73cae16fdccab18c8448fdf77740e9fd382cc55f509336f34439241e79d63
