@@ -2,6 +2,13 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Aug 2013; Andre Erdmann <dywi@mailerd.de>
+  tlp-0.3.7.1.ebuild,
+  tlp-0.3.8.1.ebuild,
+  tlp-0.3.9.900_pre20130730.ebuild,
+  tlp-0.3.9.ebuild:
+  sys-power/upower needs to be built with --enable-deprecated
+
 *tlp-0.3.9.900_pre20130730 (30 Jul 2013)
 
   30 Jul 2013; Andre Erdmann <dywi@mailerd.de> +tlp-0.3.9.900_pre20130730.ebuild:
